--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,12 @@
 - more tests
 
 
+==== 0.0.6 (2018-01-17) ===
+
+- filer 1.3 and django 1.11 tested
+- django 2.0 tested
+
+
 ==== 0.0.5 (2017-11-01) ===
 
 - added a testsuite with some basic tests
