--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,16 +5,15 @@
 
 ==== 0.0.7 ===
 
-- targeting django > 1.11. django 2 support not tested yet!
+- 
+
+==== 0.0.6 (2018-04-16) ===
+
+- targeting django > 1.11. django 2 support not tested yet (cms doesnt support it)!
 - hide tabular inlines title (td.original > p)
 - fiddling and fine tuning .form-row input { width: 100% } (removing it :)
 - alternate toolbar for django-cms 3.5 (tested with 3.5.1 and 3.5.2)
-
-
-==== 0.0.6 (2018-01-17) ===
-
 - filer 1.3 and django 1.11 tested
-- django 2.0 tested
 - docs for alternate toolbar
 
 
