--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,11 +1,12 @@
 ==== ongoing ===
 
-- more tests
+- more and more tests
 
 
-==== 0.0.7 ===
+==== 0.0.7 (2018-06-16) ===
 
--
+- fixing https://github.com/bnzk/djangocms-misc/issues/20
+- preparing for more tests
 
 
 ==== 0.0.6 (2018-04-16) ===
