--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,8 +1,13 @@
 
 
-==== 0.0.9 (unreleased) ===
+==== 0.0.10 (unreleased) ===
 
 - even more tests
+
+
+==== 0.0.9 (2018-10-23) ===
+
+- page_lookup for get_content_from_page templatetag: reverse_id, page_id or a page object supported
 
 
 ==== 0.0.8 (2018-07-27) ===
