--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,8 +1,13 @@
 
 
-==== 0.1.10 (unreleased) ===
+==== 0.1.11 (2018-10-24) ===
 
-- even more tests
+- autopublisher tests! TBD!
+
+
+==== 0.1.10 (2018-10-24) ===
+
+- fixed Page.objects.draft > drafts() exception when using djangocms_misc_get_content_from_page tag
 
 
 ==== 0.1.9 (2018-10-23) sorry, typo, should have been 0.1.0! ===
