prepare another release

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,8 +1,14 @@
 
 
-==== 0.1.11 (2018-10-24) ===
+
+==== 0.1.13 (ongoing) ===
 
 - autopublisher tests! TBD!
+
+
+==== 0.1.12 (2018-10-24) ===
+
+- version mess!
 
 
 ==== 0.1.10 (2018-10-24) ===
