--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,7 @@
 ==== 0.1.18 (ongoing) ===
 
 - more tests: autopublisher, for example!
+- drop python2! (already in 0.1.17!)
 
 
 ==== 0.1.17 (2020-09-28) ===
